# CPP_Interpreter

./: CMakeLists.txt  README.md  functions.txt  main.cpp  variables.txt
Classes/: classes.h
Classes/Application/: Application.cpp  Application.h
Classes/Calculator/: Calculator.cpp  Calculator.h
Classes/ShuntingYard/: ShuntingYard.cpp  ShuntingYard.h
Classes/Tokenizer/: Tokenizer.cpp  Tokenizer.h
Structures/Token/: Token.cpp
